test/library/packages/Sort/errors/errors-compare.str.good
errors-compare.chpl:9: In function 'main':
errors-compare.chpl:17: error: The compare method in str must return a numeric type when used with int(64) elements
